fix(plugins/plugin-client-common): Rendering of markdown incorrectly inherits white-space:nowrap from repl
Fixes #6575

--- a/plugins/plugin-client-common/web/css/static/ui.css
+++ b/plugins/plugin-client-common/web/css/static/ui.css
@@ -691,6 +691,7 @@ body.oops-total-catastrophe #restart-needed-warning {
 /* markdown */
 .page-content {
   flex: 1;
+  white-space: normal;
 }
 @include Sidecar {
   .page-content.padding-content {
@@ -807,7 +808,6 @@ $kui--page-content-paragraph-padding: 0.375em;
 .page-content p,
 .page-content .paragraph {
   padding: $kui--page-content-paragraph-padding 0;
-  white-space: normal;
 }
 .page-content h1 {
   &,
@@ -817,7 +817,6 @@ $kui--page-content-paragraph-padding: 0.375em;
     letter-spacing: 0;
     line-height: 1.25;
     padding: 0;
-    white-space: normal;
   }
 }
 .page-content h1:only-child {
@@ -831,7 +830,6 @@ $kui--page-content-paragraph-padding: 0.375em;
   line-height: 1.25;
   border-bottom: 1px solid var(--color-table-border3);
   padding-bottom: 5px;
-  white-space: normal;
 }
 .page-content > h3:first-child,
 .page-content > h2:first-child,
@@ -847,7 +845,6 @@ $kui--page-content-paragraph-padding: 0.375em;
   letter-spacing: 0;
   padding: 1em 0 0.5em;
   line-height: 1.625em;
-  white-space: normal;
 }
 .page-content h4 {
   color: var(--color-brand-01);
@@ -855,7 +852,6 @@ $kui--page-content-paragraph-padding: 0.375em;
   padding-top: $kui--page-content-h4-padding;
   font-size: unset;
   line-height: unset;
-  white-space: normal;
 
   &:not([data-is-href]) + p {
     padding-top: calc(0.5em + #{$kui--page-content-paragraph-padding});
@@ -864,7 +860,6 @@ $kui--page-content-paragraph-padding: 0.375em;
 .page-content h5 {
   font-size: 1.25em;
   line-height: 2em;
-  white-space: normal;
 }
 .page-content .kui--structured-list {
   tr {
